Specify maximum heap size and permanent size